--- a/Authothon.API.Feature/Authothon.API.Feature.csproj
+++ b/Authothon.API.Feature/Authothon.API.Feature.csproj
@@ -57,6 +57,9 @@
       <LastGenOutput>Login.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Movies\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Choose>
